--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   </head>
 
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      <meta http-equiv="refresh" content="0; url=index.static.html" />
+    </noscript>
+    <script>
+      window.location.replace('index.static.html');
+    </script>
   </body>
 </html>
