--- a/index.static.html
+++ b/index.static.html
@@ -251,7 +251,8 @@
             <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Discover our flagship programs designed to empower women at every stage of their transport career journey.</p>
             <div class="road-divider" style="width:96px; margin:2rem auto 0;"></div>
           </div>
-          <div class="grid grid-2-lg" style="margin-bottom:5rem;">
+          <div class="grid cards-grid-2" style="margin-bottom:5rem;">
+          <div class="grid cards-grid-2" style="margin-bottom:5rem;">
             <!-- Program 1 -->
             <div class="empowerment-card">
               <div style="aspect-ratio:16/9; border-radius:10px; overflow:hidden; margin-bottom:1rem;">
@@ -314,7 +315,7 @@
               <h3 style="font-family:var(--font-heading); font-size:1.75rem; margin:0 0 .5rem;">Upcoming Events</h3>
               <p class="text-muted">Join us at these exciting events and networking opportunities</p>
             </div>
-            <div class="grid grid-3-lg">
+            <div class="grid cards-grid-3">
               <div class="empowerment-card text-center">
                 <div style="display:inline-flex; width:48px; height:48px; background:hsl(var(--primary) / .1); border-radius:12px; align-items:center; justify-content:center; margin-bottom:1rem;">📆</div>
                 <h4 style="margin:.25rem 0;">Women in Transport Summit</h4>
