--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TWAGIT - Empowering Women in Transport</title>
-    <meta name="description" content="Tamiranashe Women in Transport (TWAGIT) - Promoting women's participation and leadership in Zimbabwe's transport sector through training, mentorship, and advocacy." />
-    <meta name="author" content="TWAGIT" />
+    <title>ZWIT - Empowering Women in Transport</title>
+    <meta name="description" content="Tamiranashe Women in Transport (ZWIT) - Promoting women's participation and leadership in Zimbabwe's transport sector through training, mentorship, and advocacy." />
+    <meta name="author" content="ZWIT" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Lora:wght@400;500&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="TWAGIT - Empowering Women in Transport" />
+    <meta property="og:title" content="ZWIT - Empowering Women in Transport" />
     <meta property="og:description" content="Promoting women's participation and leadership in Zimbabwe's transport sector" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
