--- a/index.static.html
+++ b/index.static.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TWAGIT</title>
+    <title>ZWIT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
@@ -15,9 +15,9 @@
     <header class="navbar">
       <nav class="navbar-inner container" aria-label="Global">
         <a href="#home" class="brand">
-          <img src="public/lovable-uploads/f42027b0-23c8-4996-8ec9-d259111bead5.png" alt="TWAGIT Logo">
+          <img src="public/New _logo.jpg" alt="ZWIT Logo">
           <div>
-            <div class="brand-title">TWAGIT</div>
+            <div class="brand-title">ZWIT</div>
             <div class="brand-sub">Tamiranashe Women in Transport</div>
           </div>
         </a>
@@ -26,15 +26,12 @@
           <button onclick="scrollToHash('#about')"><i data-lucide="info"></i> About</button>
           <button onclick="scrollToHash('#programs')"><i data-lucide="book-open"></i> Programs</button>
           <button onclick="scrollToHash('#get-involved')"><i data-lucide="users"></i> Get Involved</button>
-          <button onclick="scrollToHash('#news')"><i data-lucide="newspaper"></i> News</button>
           <button onclick="scrollToHash('#contact')"><i data-lucide="mail"></i> Contact</button>
         </div>
         <div class="nav-actions">
-          <button class="icon-btn" onclick="toggleTheme()" aria-label="Toggle theme"><span class="theme-icon"><span class="sun">☀</span><span class="moon">🌙</span></span></button>
           <button class="btn btn-hero" data-scroll="#get-involved">Join Us</button>
         </div>
         <div class="nav-mobile">
-          <button class="icon-btn" onclick="toggleTheme()" aria-label="Toggle theme"><span class="theme-icon"><span class="sun">☀</span><span class="moon">🌙</span></span></button>
           <button class="icon-btn" id="open-menu" aria-label="Open menu">☰</button>
         </div>
       </nav>
@@ -45,8 +42,8 @@
       <div class="panel-inner">
         <div style="display:flex; align-items:center; justify-content:space-between; margin-bottom:1rem;">
           <div class="brand" style="gap:.5rem">
-            <img src="public/lovable-uploads/f42027b0-23c8-4996-8ec9-d259111bead5.png" alt="TWAGIT" style="height:32px; width:auto;">
-            <div class="brand-title" style="font-size:1rem">TWAGIT</div>
+            <img src="public/New _logo.jpg" alt="ZWIT" style="height:32px; width:auto;">
+            <div class="brand-title" style="font-size:1rem">ZWIT</div>
           </div>
           <button class="icon-btn" id="close-menu" aria-label="Close menu">✕</button>
         </div>
@@ -55,7 +52,6 @@
           <button class="mobile-item" onclick="scrollToHash('#about'); closeMenu()"><i data-lucide="info"></i> About</button>
           <button class="mobile-item" onclick="scrollToHash('#programs'); closeMenu()"><i data-lucide="book-open"></i> Programs</button>
           <button class="mobile-item" onclick="scrollToHash('#get-involved'); closeMenu()"><i data-lucide="users"></i> Get Involved</button>
-          <button class="mobile-item" onclick="scrollToHash('#news'); closeMenu()"><i data-lucide="newspaper"></i> News</button>
           <button class="mobile-item" onclick="scrollToHash('#contact'); closeMenu()"><i data-lucide="mail"></i> Contact</button>
         </div>
         <div style="margin-top:1rem; padding-top:1rem; border-top:1px solid hsl(var(--border));">
@@ -115,8 +111,8 @@
       <section id="about" class="section bg-section">
         <div class="container">
           <div class="text-center" style="margin-bottom:4rem;">
-            <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;">About <span style="color:hsl(var(--primary))">TWAGIT</span></h2>
-            <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Tamiranashe Women in Transport (TWAGIT) is a pioneering organization dedicated to transforming Zimbabwe's transport sector through women's empowerment and leadership.</p>
+            <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;">About <span style="color:hsl(var(--primary))">ZWIT</span></h2>
+            <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Tamiranashe Women in Transport (ZWIT) is a pioneering organization dedicated to transforming Zimbabwe's transport sector through women's empowerment and leadership.</p>
           </div>
           <div class="grid grid-2-md" style="margin-bottom:5rem;">
             <div class="empowerment-card">
@@ -464,15 +460,15 @@
               <h3 style="font-family:var(--font-heading); font-size:1.75rem; margin:.5rem 0;">Ready to Get Started?</h3>
               <p class="text-muted">Fill out the form below and we'll get in touch to discuss how you can join our mission.</p>
             </div>
-            <form onsubmit="event.preventDefault(); alert('Thank you for your interest! We \'ll get back to you within 48 hours.'); this.reset();" style="display:grid; gap:1.5rem;">
+            <form id="contact-form" action="https://formspree.io/f/mzzaqlbo" method="POST" style="display:grid; gap:1.5rem;">
               <div class="grid grid-2-md">
                 <div>
                   <label for="name" style="display:block; font-size:.9rem; font-weight:600; margin-bottom:.5rem;">Full Name *</label>
-                  <input id="name" name="name" type="text" required placeholder="Enter your full name">
+                  <input id="name" name="name" type="text" required placeholder="Enter your full name" autocomplete="name">
                 </div>
                 <div>
                   <label for="email" style="display:block; font-size:.9rem; font-weight:600; margin-bottom:.5rem;">Email Address *</label>
-                  <input id="email" name="email" type="email" required placeholder="Enter your email address">
+                  <input id="email" name="email" type="email" required placeholder="Enter your email address" autocomplete="email">
                 </div>
               </div>
               <div>
@@ -490,8 +486,10 @@
               </div>
               <div>
                 <label for="message" style="display:block; font-size:.9rem; font-weight:600; margin-bottom:.5rem;">Message</label>
-                <textarea id="message" name="message" rows="4" placeholder="Tell us more about your interest or ask any questions you might have..."></textarea>
+                <textarea id="message" name="message" rows="4" placeholder="Tell us more about your interest or ask any questions you might have..." required></textarea>
               </div>
+              <input type="hidden" name="_subject" value="New inquiry from ZWIT website">
+              <input type="hidden" name="form_name" value="get_started">
               <div class="text-center">
                 <button type="submit" class="btn btn-hero">Send Message</button>
               </div>
@@ -536,15 +534,21 @@
               <div>
                 <h4 style="font-family:var(--font-heading); font-size:1.25rem; margin:0 0 1rem; color:#fff;">Follow Us</h4>
                 <div style="display:flex; gap:1rem;">
-                  <a href="https://twitter.com/TWAGIT" target="_blank" rel="noopener" class="glass" style="width:48px; height:48px; display:flex; align-items:center; justify-content:center;">𝕏</a>
-                  <a href="https://facebook.com/TamiranasheWomenInTransport" target="_blank" rel="noopener" class="glass" style="width:48px; height:48px; display:flex; align-items:center; justify-content:center;">f</a>
-                  <a href="https://linkedin.com/company/tamiranashe-women-in-transport" target="_blank" rel="noopener" class="glass" style="width:48px; height:48px; display:flex; align-items:center; justify-content:center;">in</a>
+                  <a href="#" target="_blank" rel="noopener" aria-label="Twitter" class="glass" style="width:48px; height:48px; display:flex; align-items:center; justify-content:center; color:#fff;">
+                    <i data-lucide="twitter" style="width:24px; height:24px;"></i>
+                  </a>
+                  <a href="https://facebook.com/TamiranasheWomenInTransport" target="_blank" rel="noopener" aria-label="Facebook" class="glass" style="width:48px; height:48px; display:flex; align-items:center; justify-content:center; color:#fff;">
+                    <i data-lucide="facebook" style="width:24px; height:24px;"></i>
+                  </a>
+                  <a href="https://linkedin.com/company/tamiranashe-women-in-transport" target="_blank" rel="noopener" aria-label="LinkedIn" class="glass" style="width:48px; height:48px; display:flex; align-items:center; justify-content:center; color:#fff;">
+                    <i data-lucide="linkedin" style="width:24px; height:24px;"></i>
+                  </a>
                 </div>
               </div>
             </div>
             <div class="glass" style="padding:2rem;">
               <h3 style="font-family:var(--font-heading); font-size:1.5rem; margin:0 0 1rem; color:#fff;">Join the Movement</h3>
-              <p style="color:rgba(255,255,255,.85);">Be part of the change that's transforming Zimbabwe's transport sector. Whether you're looking to advance your career, share your expertise, or support our mission, there's a place for you in the TWAGIT community.</p>
+              <p style="color:rgba(255,255,255,.85);">Be part of the change that's transforming Zimbabwe's transport sector. Whether you're looking to advance your career, share your expertise, or support our mission, there's a place for you in the ZWIT community.</p>
               <div style="display:grid; gap:.75rem; margin-top:1rem;">
                 <div style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:#fff; border-radius:999px; margin:.5rem .75rem 0 0;"></span><p style="margin:0; color:rgba(255,255,255,.85);">Join our mentorship programs and training initiatives</p></div>
                 <div style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:#fff; border-radius:999px; margin:.5rem .75rem 0 0;"></span><p style="margin:0; color:rgba(255,255,255,.85);">Connect with like-minded professionals in your industry</p></div>
@@ -569,7 +573,7 @@
       <div class="container" style="padding:4rem 1rem;">
         <div class="grid footer-grid">
           <div>
-            <h3 style="font-family:var(--font-heading); font-size:1.5rem; margin:0 0 1rem;">TWAGIT</h3>
+            <h3 style="font-family:var(--font-heading); font-size:1.5rem; margin:0 0 1rem;">ZWIT</h3>
             <p style="color:rgba(255,255,255,.8);">Empowering women in Zimbabwe's transport sector through training, mentorship, and advocacy.</p>
             <div style="margin-top:1rem; display:grid; gap:.5rem;">
               <div>📧 <a href="mailto:nancymbauranashe@gmail.com" style="color:rgba(255,255,255,.85); text-decoration:none;">nancymbauranashe@gmail.com</a></div>
@@ -605,7 +609,7 @@
         </div>
         <div class="footer-bottom">
           <div class="container" style="display:flex; gap:1rem; align-items:center; justify-content:space-between; flex-wrap:wrap;">
-            <p style="color:rgba(255,255,255,.8); font-size:.95rem;">© 2024 Tamiranashe Women in Transport (TWAGIT). All rights reserved.</p>
+            <p style="color:rgba(255,255,255,.8); font-size:.95rem;">© 2024 Tamiranashe Women in Transport (ZWIT). All rights reserved.</p>
             <div style="display:flex; align-items:center; gap:.5rem; color:rgba(255,255,255,.8);">
               <span>Made with</span> <span style="color:hsl(var(--primary));">♥</span> <span>for women in transport</span>
             </div>
