--- a/index.static.html
+++ b/index.static.html
@@ -111,7 +111,7 @@
       <section id="about" class="section bg-section">
         <div class="container">
           <div class="text-center" style="margin-bottom:4rem;">
-            <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;">About <span style="color:hsl(var(--primary))">ZWIT</span></h2>
+            <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;"><span style="color:hsl(var(--primary))">About ZWIT</span></h2>
             <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Tamiranashe Women in Transport (ZWIT) is a pioneering organization dedicated to transforming Zimbabwe's transport sector through women's empowerment and leadership.</p>
           </div>
           <div class="grid grid-2-md" style="margin-bottom:5rem;">
