--- a/index.static.html
+++ b/index.static.html
@@ -32,7 +32,7 @@
           <button class="btn btn-hero" data-scroll="#get-involved">Join Us</button>
         </div>
         <div class="nav-mobile">
-          <button class="icon-btn" id="open-menu" aria-label="Open menu">☰</button>
+          <button class="icon-btn" id="open-menu" aria-label="Open menu"><i data-lucide="menu"></i></button>
         </div>
       </nav>
     </header>
@@ -45,7 +45,7 @@
             <img src="public/New _logo.jpg" alt="ZWIT" style="height:32px; width:auto;">
             <div class="brand-title" style="font-size:1rem">ZWIT</div>
           </div>
-          <button class="icon-btn" id="close-menu" aria-label="Close menu">✕</button>
+          <button class="icon-btn" id="close-menu" aria-label="Close menu"><i data-lucide="x"></i></button>
         </div>
         <div class="mobile-list">
           <button class="mobile-item" onclick="scrollToHash('#home'); closeMenu()"><i data-lucide="house"></i> Home</button>
