--- a/index.static.html
+++ b/index.static.html
@@ -609,9 +609,9 @@
         </div>
         <div class="footer-bottom">
           <div class="container" style="display:flex; gap:1rem; align-items:center; justify-content:space-between; flex-wrap:wrap;">
-            <p style="color:rgba(255,255,255,.8); font-size:.95rem;">© 2024 Tamiranashe Women in Transport (ZWIT). All rights reserved.</p>
+            <p style="color:rgba(255,255,255,.8); font-size:.95rem;">© 2025 Tamiranashe Women in Transport (ZWIT). All rights reserved.</p>
             <div style="display:flex; align-items:center; gap:.5rem; color:rgba(255,255,255,.8);">
-              <span>Made with</span> <span style="color:hsl(var(--primary));">♥</span> <span>for women in transport</span>
+              <span>Designed By</span> <span style="color:hsl(var(--primary));">SaasCode</span> <span>for women in transport</span>
             </div>
           </div>
         </div>
