--- a/index.static.html
+++ b/index.static.html
@@ -231,8 +231,8 @@
               <h3 style="font-family:var(--font-heading); font-size:1.75rem; margin:0 0 .5rem;">Ready to Get Started?</h3>
               <p style="font-size:1.125rem; opacity:.9; margin:0 0 2rem;">Join our community of empowered women transforming Zimbabwe's transport sector</p>
               <div style="display:flex; gap:1rem; flex-wrap:wrap; justify-content:center;">
-                <button class="btn" style="background:#fff; color:hsl(var(--primary)); padding:.75rem 2rem; border-radius:10px;">Explore Programs</button>
-                <button class="btn" style="border:2px solid #fff; color:#fff; padding:.75rem 2rem; border-radius:10px;">Contact Us</button>
+                <button class="btn" style="background:#fff; color:hsl(var(--primary)); padding:.75rem 2rem; border-radius:10px;" data-scroll="#programs">Explore Programs</button>
+                <button class="btn" style="border:2px solid #fff; color:#fff; padding:.75rem 2rem; border-radius:10px;" data-scroll="#contact">Contact Us</button>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
                   <li class="text-muted" style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:hsl(var(--primary)); border-radius:999px; margin:.5rem .75rem 0 0;"></span>Ongoing support and guidance</li>
                 </ul>
               </div>
-              <button class="btn btn-hero" style="width:100%">Apply Now</button>
+              <button class="btn btn-hero" style="width:100%" data-scroll="#get-involved">Apply Now</button>
             </div>
             <!-- Program 2 -->
             <div class="empowerment-card">
@@ -301,7 +301,7 @@
                   <li class="text-muted" style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:hsl(var(--primary)); border-radius:999px; margin:.5rem .75rem 0 0;"></span>Hands-on practical experience</li>
                 </ul>
               </div>
-              <button class="btn btn-hero" style="width:100%">Get Notified</button>
+              <button class="btn btn-hero" style="width:100%" data-scroll="#get-involved">Get Notified</button>
             </div>
           </div>
 
@@ -419,7 +419,7 @@
                   <li class="text-muted" style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:hsl(var(--primary)); border-radius:999px; margin:.5rem .75rem 0 0;"></span>Career development resources</li>
                 </ul>
               </div>
-              <button class="btn btn-hero" style="width:100%">Join Network</button>
+              <button class="btn btn-hero" style="width:100%" data-scroll="#get-involved">Join Network</button>
             </div>
             <div class="empowerment-card text-center">
               <div style="display:inline-flex; width:80px; height:80px; border-radius:999px; background:var(--gradient-hero); color:#fff; align-items:center; justify-content:center; margin-bottom:1rem;">🤝</div>
@@ -434,7 +434,7 @@
                   <li class="text-muted" style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:hsl(var(--primary)); border-radius:999px; margin:.5rem .75rem 0 0;"></span>Policy advocacy initiatives</li>
                 </ul>
               </div>
-              <button class="btn btn-hero" style="width:100%">Start Volunteering</button>
+              <button class="btn btn-hero" style="width:100%" data-scroll="#get-involved">Start Volunteering</button>
             </div>
             <div class="empowerment-card text-center">
               <div style="display:inline-flex; width:80px; height:80px; border-radius:999px; background:var(--gradient-hero); color:#fff; align-items:center; justify-content:center; margin-bottom:1rem;">❤️</div>
@@ -449,7 +449,7 @@
                   <li class="text-muted" style="display:flex; align-items:start;"><span style="width:8px; height:8px; background:hsl(var(--primary)); border-radius:999px; margin:.5rem .75rem 0 0;"></span>Enable policy research</li>
                 </ul>
               </div>
-              <button class="btn btn-hero" style="width:100%">Make a Donation</button>
+              <button class="btn btn-hero" style="width:100%" data-scroll="#get-involved">Make a Donation</button>
             </div>
           </div>
 
