--- a/index.static.html
+++ b/index.static.html
@@ -112,7 +112,7 @@
         <div class="container">
           <div class="text-center" style="margin-bottom:4rem;">
             <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;"><span style="color:hsl(var(--primary))">About ZWIT</span></h2>
-            <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Tamiranashe Women in Transport (ZWIT) is a pioneering organization dedicated to transforming Zimbabwe's transport sector through women's empowerment and leadership.</p>
+            <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Zimbabwe Women in Transport (ZWIT) is a pioneering organization dedicated to transforming Zimbabwe's transport sector through women's empowerment and leadership.</p>
           </div>
           <div class="grid grid-2-md" style="margin-bottom:5rem;">
             <div class="empowerment-card">
@@ -609,7 +609,7 @@
         </div>
         <div class="footer-bottom">
           <div class="container" style="display:flex; gap:1rem; align-items:center; justify-content:space-between; flex-wrap:wrap;">
-            <p style="color:rgba(255,255,255,.8); font-size:.95rem;">© 2025 Tamiranashe Women in Transport (ZWIT). All rights reserved.</p>
+            <p style="color:rgba(255,255,255,.8); font-size:.95rem;">© 2025 Zimbabwe Women in Transport (ZWIT). All rights reserved.</p>
             <div style="display:flex; align-items:center; gap:.5rem; color:rgba(255,255,255,.8);">
               <span>Designed By</span> <span style="color:hsl(var(--primary));">SaasCode</span> <span>for women in transport</span>
             </div>
