--- a/index.static.html
+++ b/index.static.html
@@ -18,7 +18,7 @@
           <img src="public/New _logo.jpg" alt="ZWIT Logo">
           <div>
             <div class="brand-title">ZWIT</div>
-            <div class="brand-sub">Tamiranashe Women in Transport</div>
+            <div class="brand-sub">Zimbabwe Women in Transport</div>
           </div>
         </a>
         <div class="nav-links" id="nav-links">
@@ -243,7 +243,7 @@
       <section id="programs" class="section bg-section">
         <div class="container">
           <div class="text-center" style="margin-bottom:4rem;">
-            <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;">Our <span style="color:hsl(var(--primary))">Programs</span></h2>
+            <h2 style="font-family:var(--font-heading); font-weight:800; font-size:clamp(2rem,5vw,3rem); margin:0 0 1rem;"><span style="color:hsl(var(--primary))">Our Programs</span></h2>
             <p class="text-muted" style="font-size:1.125rem; max-width:60ch; margin:0 auto;">Discover our flagship programs designed to empower women at every stage of their transport career journey.</p>
             <div class="road-divider" style="width:96px; margin:2rem auto 0;"></div>
           </div>
